--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React Todo List</title>
+  <title>React Skeleton</title>
 </head>
 <body>
-  <h1>This is not a React app yet!</h1>
+  <h1>App</h1>
   <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
