--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <title>React Skeleton</title>
 </head>
 <body>
-  <h1>App</h1>
+  <h1>To Do List</h1>
   <div id="app"></div>
   <script src="bundle.js"></script>
 </body>
